refactor:修复歌名错误

--- a/Baks/musicList_20240427095314.md
+++ b/Baks/musicList_20240427095314.md
@@ -1,6 +1,6 @@
 # music
 my favorate musics
-2024.04.27 更新
+2024.04.01 更新
 
 ## 列表
 ```js
@@ -50,7 +50,7 @@ name: '万水千山总是情', url: 'https://github.com/lihan3238/music/raw/main
 name: '不可能错过你', url: 'https://github.com/lihan3238/music/raw/main/musics/不可能错过你-王力宏.mp3', artist: '王力宏', cover: 'https://user-images.githubusercontent.com/140466644/266218167-0a08d24b-2f75-4a6b-9253-227612dffa98.png', lrc: 'https://raw.githubusercontent.com/lihan3238/music/main/musics/不可能错过你-王力宏.lrc'
 },
 {
-name: '不该', url: 'https://github.com/lihan3238/music/raw/main/musics/不该-周杰伦,张惠妹.mp3', artist: '周杰伦,张惠妹', cover: 'https://user-images.githubusercontent.com/140466644/266218167-0a08d24b-2f75-4a6b-9253-227612dffa98.png', lrc: 'https://raw.githubusercontent.com/lihan3238/music/main/musics/不该-周杰伦,张惠妹.lrc'
+name: '不改', url: 'https://github.com/lihan3238/music/raw/main/musics/不改-周杰伦,张惠妹.mp3', artist: '周杰伦,张惠妹', cover: 'https://user-images.githubusercontent.com/140466644/266218167-0a08d24b-2f75-4a6b-9253-227612dffa98.png'
 },
 {
 name: '偏偏喜欢你', url: 'https://github.com/lihan3238/music/raw/main/musics/偏偏喜欢你-陈百强.mp3', artist: '陈百强', cover: 'https://user-images.githubusercontent.com/140466644/266218167-0a08d24b-2f75-4a6b-9253-227612dffa98.png', lrc: 'https://raw.githubusercontent.com/lihan3238/music/main/musics/偏偏喜欢你-陈百强.lrc'
